# divera-status-tracker

./: .gitignore  Cargo.toml  README.md  flake.nix  module.nix
src/: cli.rs  config.rs  data.rs  main.rs
