[package]
name = "divera-status-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
divera = { path = "../divera" }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
clap-markdown = "0.1.4"
